# clear_codex

./: README.md  index.html  package.json  pnpm-lock.yaml
desktop-controller/: Installer.cs  Program.cs
release/: Install-CodexWindowController.bat  codex-window-controller.settings.txt
src/: App.css  App.tsx  ControlHandle.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  models.rs  persistence.rs  session.rs
src/components/: TerminalSurface.tsx
tools/: Build-CodexWindowControllerExe.ps1  CodexWindowController.ps1  Install-CodexWindowController.ps1  Set-CodexDesktopWindow.ps1
